more features and transactional manager abstraction